# GPTEval3D

./: .gitignore  README.md  gpt_eval_alpha.py  pyproject.toml  requirements.txt
assets/: data_format.md
data/tournament-v0/: config.json  prompts.json
data/tournament-v0/gpt_prompts/: n1_d0342.txt  n1_d2.txt  n1_d3.txt  n1_d4.txt  n1_rgb_d013.txt  n4_d0.txt  n4_full.txt  n4_rgb_d013.txt  n9_d1.txt
gpteval3d/: gpt_eval_alpha.py
gpteval3d/utils/: image_utils.py  t23d_tournament.py
utils/: glide_elo.py  gpt4v_utils.py  t23d_tournament.py
