[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpteval3d"
version = "0.0.1"
description = "A pip package for GPTEval3D"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
        'openai',
        'tqdm>=4.28.1',
        'numpy>=1.14.3',
        'Pillow',
        'torch>=1.10.0',
]

[project.urls]
Homepage = "https://gpteval3d.github.io/"
Issues = "https://github.com/3DTopia/GPTEval3D/issues"

[tool.setuptools]
packages = ["gpteval3d", "gpteval3d.utils"]
